He creado parrafo 1 y parrafo 2 desde master

--- a/example.html
+++ b/example.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>HELOWWWWWW</h1>
-    
+    <p>Parrafo 1 creado desde master</p>
+    <p>creado desde master</p>
 </body>
 </html>
